k8s/discovery-app.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: discovery-server
spec:
  serviceName: "discovery-service"
  replicas: 3
  selector:
    matchLabels:
      app: discovery-server
  template:
    metadata:
      labels:
        app: discovery-server
    spec:
      containers:
      - name: discovery-server
        image: springcommunity/spring-petclinic-discovery-server
        ports:
        - containerPort: 8761
        readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8761
            initialDelaySeconds: 30
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: discovery-server
  labels:
    app: discovery-server
spec:
  clusterIP: None
  ports:
    - port: 8761
      name: discovery-server
  selector:
    app: discovery-server
