k8s/customers-app.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: customers-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: customers-service
  template:
    metadata:
      labels:
        app: customers-service
    spec:
      containers:
        - name: customers-service
          image: springcommunity/spring-petclinic-customers-service
          resources:
            limits:
              memory: "512Mi"
          ports:
            - containerPort: 8081
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8081
            initialDelaySeconds: 30
            periodSeconds: 10
      volumes:
        - name: customers-service-data
          persistentVolumeClaim:
            claimName: customers-service-pvc

---
apiVersion: v1
kind: Service
metadata:
  name: customers-service
spec:
  selector:
    app: customers-service
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
  type: ClusterIP

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: customers-service
  annotations:
    cert-manager.io/issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - jobanarubi-e.k8s.luxoft.academy
      secretName: tls-secret
  rules:
    - host: jobanarubi-e.k8s.luxoft.academy
      http:
        paths:
          - path: /customers
            pathType: Prefix
            backend:
              service:
                name: customers-service
                port:
                  number: 8081
