k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: config-server
  annotations:
    cert-manager.io/issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - jobanarubi-e.k8s.luxoft.academy
      secretName: tls-secret
  rules:
    - host: jobanarubi-e.k8s.luxoft.academy
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: config-server
                port:
                  number: 8888
          - path: /eureka
            pathType: ImplementationSpecific
            backend:
              service:
                name: discovery-server
                port:
                  number: 8761
