k8s/visits-app.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: visits-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: visits-service
  template:
    metadata:
      labels:
        app: visits-service
    spec:
      containers:
        - name: visits-service
          image: springcommunity/spring-petclinic-visits-service
          resources:
            limits:
              memory: "512Mi"
          ports:
            - containerPort: 8082
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8082
            initialDelaySeconds: 30
            periodSeconds: 10
      volumes:
        - name: visits-service-data
          persistentVolumeClaim:
            claimName: visits-service-pvc

---
apiVersion: v1
kind: Service
metadata:
  name: visits-service
spec:
  selector:
    app: visits-service
  ports:
    - protocol: TCP
      port: 8082
      targetPort: 8082
  type: ClusterIP

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: visits-service
  annotations:
    cert-manager.io/issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - jobanarubi-e.k8s.luxoft.academy
      secretName: tls-secret
  rules:
    - host: jobanarubi-e.k8s.luxoft.academy
      http:
        paths:
          - path: /visits
            pathType: Prefix
            backend:
              service:
                name: visits-service
                port:
                  number: 8082
